@@ -120,7 +120,7 @@ class _AdvisingScreenTypeView extends _AdvisingScreen
 		$pC .= $this->draw_semester_box_top($title);
 
 		$is_empty = TRUE;
-		
+
 		$count_hours_completed = 0;
 		$list_semesters->reset_counter();
 		while($list_semesters->has_more())
@@ -130,7 +130,9 @@ class _AdvisingScreenTypeView extends _AdvisingScreen
 			{ // These are the "added by advisor" courses.  Skip them.
 				continue;
 			}
-			
+
+      $last_req_by_degree_id = -1;
+			      
 			// First, display the list of bare courses.
 			$semester->list_courses->sort_alphabetical_order();
 			$semester->list_courses->reset_counter();
@@ -148,7 +150,24 @@ class _AdvisingScreenTypeView extends _AdvisingScreen
 				}
 		
 				$is_empty = FALSE;
-				
+			
+      
+        // Display what degree this course is required by
+        // TODO:  Decide if we should display the degree this course is coming from or not.
+        // Only display what degree we are required by if we have only displayed it once so far...
+        if (intval($course->req_by_degree_id) > 0 && $course->req_by_degree_id != $last_req_by_degree_id) {
+          
+          $t_degree_plan = new DegreePlan($course->req_by_degree_id);
+          $t_degree_plan->load_descriptive_data();
+          $pC .= "<tr><td colspan='8'>
+                    <div class='tenpt required-by-degree'>Required by " . $t_degree_plan->get_title2(TRUE, TRUE) . "</div>
+                  </td></tr>";
+          
+          // Remember what the last degree we displayed was.        
+          $last_req_by_degree_id = $course->req_by_degree_id;                
+        }            
+      
+      	
 				// Is this course being fulfilled by anything?
 				//if (is_object($course->courseFulfilledBy))
 				if (!($course->course_list_fulfilled_by->is_empty))
@@ -161,7 +180,7 @@ class _AdvisingScreenTypeView extends _AdvisingScreen
 					if ($course->course_list_fulfilled_by->get_first()->display_status == "completed")
 					{ // We only want to count completed hours, no midterm or enrolled courses.
 						//$count_hours_completed += $course->course_list_fulfilled_by->get_first()->hours_awarded;
-            $h = $course->course_list_fulfilled_by->get_first()->hours_awarded;
+            $h = $course->course_list_fulfilled_by->get_first()->get_hours_awarded();
 					  if ($course->course_list_fulfilled_by->get_first()->bool_ghost_hour == TRUE) {
 					   $h = 0;
 					  }
@@ -170,7 +189,11 @@ class _AdvisingScreenTypeView extends _AdvisingScreen
 				} else {
 					// This requirement is not being fulfilled...
 					$pC .= $this->draw_course_row($course);
-				}				
+				}
+        
+        
+        
+        				
 				$sem_is_empty = false;
 			}
 
@@ -185,6 +208,25 @@ class _AdvisingScreenTypeView extends _AdvisingScreen
 				{
 					continue;
 				}
+
+
+        // Display what degree this group is required by
+        // TODO:  Decide if we should display the degree this group is coming from or not.
+        // Only display what degree we are required by if we have only displayed it once so far...
+        if (intval($group->req_by_degree_id) > 0 && $group->req_by_degree_id != $last_req_by_degree_id) {
+          
+          $t_degree_plan = new DegreePlan($group->req_by_degree_id);
+          $t_degree_plan->load_descriptive_data();
+          $pC .= "<tr><td colspan='8'>
+                    <div class='tenpt required-by-degree'>Required by $t_degree_plan->title</div>
+                  </td></tr>";
+          
+          // Remember what the last degree we displayed was.        
+          $last_req_by_degree_id = $group->req_by_degree_id;                
+        }            
+
+
+
 
 				$pC .= "<tr><td colspan='8'>";
 				$pC .= $this->display_group($group);
