@@ -428,7 +428,7 @@ function user_permissions_form_submit($form, $form_submit) {
           
           // Okay, save this to our table.
           db_query("INSERT INTO role_permissions (rid, perm)
-                    VALUES ('?', '?') ", $rid, $perm);      
+                    VALUES (?, ?) ", $rid, $perm);      
         }
       }
     }
@@ -514,7 +514,7 @@ function user_user_roles_form_submit($form, $form_state) {
     $new_role = preg_replace("/[^a-zA-Z0-9_]/", " ", $new_role);
 
     // Okay, add to the roles table.
-    db_query("INSERT INTO roles (name) VALUES ('?') ", $new_role);
+    db_query("INSERT INTO roles (name) VALUES (?) ", $new_role);
         
     fp_add_message("The new role has been added successfully.");       
   }
@@ -525,7 +525,7 @@ function user_user_roles_form_submit($form, $form_state) {
     $i = trim($temp[1]);
   
     // Remove this rid from the table.
-    db_query("DELETE FROM roles WHERE rid = '?' ", $i);
+    db_query("DELETE FROM roles WHERE rid = ? ", $i);
       
     fp_add_message("The role has been deleted successfully.");    
             
@@ -540,7 +540,7 @@ function user_user_roles_form_submit($form, $form_state) {
     if (trim($new_name) != "") {  
       
       // Let's update the table.
-      db_query("UPDATE roles SET name = '?' WHERE rid = '?' ", $new_name, $i);
+      db_query("UPDATE roles SET name = ? WHERE rid = ? ", $new_name, $i);
   
       fp_add_message("The role has been edited successfully.");    
     }
@@ -559,6 +559,8 @@ function user_edit_user_advisees_form() {
   
   $faculty_cwid = $_REQUEST["faculty_cwid"];
   $user_id = db_get_user_id_from_cwid($faculty_cwid);
+  $de_catalog_year = @$_REQUEST["de_catalog_year"];
+
 
   // Figure out what the page's sub-tabs should be, and set them.
   $tab_array = array();
@@ -624,14 +626,14 @@ function user_edit_user_advisees_form() {
   $contents = "";
   $db = get_global_database_handler();
   // begin by reading what's already there.
-  $res = db_query("SELECT * FROM advisor_student WHERE faculty_id = '?' ", $faculty_cwid);
+  $res = db_query("SELECT * FROM advisor_student WHERE faculty_id = ? ", $faculty_cwid);
   while ($cur = db_fetch_array($res)) {
     $contents .= trim($cur["student_id"]);
     // If this student exists, get their name and other info as well, to help with display.
     $name = $db->get_student_name($cur["student_id"]);
-    $major = $db->get_student_major_from_db($cur["student_id"]);
-    if ($name || $major) {
-      $contents .= "   #  $name - $major ";
+    $majors = $db->get_student_majors_from_db($cur["student_id"], TRUE);
+    if ($name || $majors) {
+      $contents .= "   #  $name - $majors ";
     }
     $contents .= "\n";
   }
@@ -698,7 +700,7 @@ function user_edit_user_advisees_form_submit($form, $form_state) {
 
   // Begin by clearing the table for this advisor.
   $faculty_cwid = trim($form_state["values"]["faculty_cwid"]);
-  db_query("DELETE FROM advisor_student WHERE faculty_id = '?' ", $faculty_cwid);
+  db_query("DELETE FROM advisor_student WHERE faculty_id = ? ", $faculty_cwid);
       
   $students = trim($form_state["values"]["students"]);
   $lines = explode("\n", $students);
@@ -709,7 +711,7 @@ function user_edit_user_advisees_form_submit($form, $form_state) {
     // Okay, $line should now contain the CWID.
     // Insert into db.  (use REPLACE to prevent an error if data was entered twice)
     db_query("REPLACE INTO advisor_student (faculty_id, student_id)
-              VALUES ('?', '?') ", $faculty_cwid, $line);        
+              VALUES (?, ?) ", $faculty_cwid, $line);        
     
   }
 
@@ -730,9 +732,11 @@ function user_edit_user_form() {
   fp_add_js(fp_get_module_path("user") . "/js/user.js");
 
   $form = array();
+  $m = 0;
+  
   $faculty_cwid = $_REQUEST["faculty_cwid"];
   $user_id = db_get_user_id_from_cwid($faculty_cwid);
-  
+  $de_catalog_year = @$_REQUEST["de_catalog_year"];
   $name = fp_get_faculty_name($faculty_cwid);
   
   fp_set_title(t("Edit Faculty/Staff User @name (@id)", array("@name" => $name, "@id" => $faculty_cwid)));
@@ -842,7 +846,7 @@ function user_edit_user_form() {
     // NOT a new faculty.  Load their information normally.
     
     $res = db_query("SELECT * FROM users u, faculty s
-                     WHERE u.cwid = '?'
+                     WHERE u.cwid = ?
                      AND u.is_faculty = '1'
                      AND u.cwid = s.cwid", $faculty_cwid);
     $cur = db_fetch_array($res);
@@ -909,11 +913,14 @@ function user_edit_user_form() {
     "size" => 30,
   );  
     
-  $form["major_code"] = array(
-    "label" => t("Major code:"),
+  $form["major_code_csv"] = array(
+    "label" => t("Major code CSV:"),
     "type" => "textfield",
-    "value" => $cur["major_code"],
-    "size" => 10,
+    "value" => $cur["major_code_csv"],
+    "size" => 60,
+    "maxlength" => 255,
+    "description" => t("Enter the major codes which this faculty member is over, separated by commas.  Ex: ACCT,MATH
+                        <br>If the user is only over 1 major code, just enter that one major code."),
   );  
     
   $form["submit"] = array(
@@ -988,14 +995,14 @@ function user_edit_user_form_validate($form, $form_state) {
 
     
     // Check cwid isn't already in use.
-    $test = db_result(db_query("SELECT cwid FROM users WHERE cwid = '?' AND is_faculty = '1'", $new_cwid));    
+    $test = db_result(db_query("SELECT cwid FROM users WHERE cwid = ? AND is_faculty = '1'", $new_cwid));    
     if ($test == $new_cwid) {
       form_error("new_faculty_cwid", t("The cwid you entered is already in use.  Please select a different cwid."));
       return;
     }
    
     // Check user_name isn't already in use.
-    $test = db_result(db_query("SELECT user_name FROM users WHERE user_name = '?' ", $new_user_name));    
+    $test = db_result(db_query("SELECT user_name FROM users WHERE user_name = ? ", $new_user_name));    
     if ($test == $new_user_name) {
       form_error("new_user_name", t("The username you entered is already in use.  Please select a different username."));
       return;
@@ -1026,13 +1033,13 @@ function user_edit_user_form_submit($form, $form_state) {
   $faculty_cwid = $values["faculty_cwid"];
   // Save the roles into the database for this user.
   // Begin by deleting what's there all ready.
-  db_query("DELETE FROM user_roles WHERE user_id = '?' ", $user_id);
+  db_query("DELETE FROM user_roles WHERE user_id = ? ", $user_id);
 
   if (is_array($values["roles"])) {
     foreach ($values["roles"] as $rid) {
      //fpm("inserting $rid");
      db_query("INSERT INTO user_roles (user_id, rid)
-                VALUES ('?', '?') ", $user_id, $rid);
+                VALUES (?, ?) ", $user_id, $rid);
     }
   }
   
@@ -1040,8 +1047,8 @@ function user_edit_user_form_submit($form, $form_state) {
   if ($values["perform_action2"] == "delete_faculty" && user_has_permission("delete_users")) {
 
     
-    db_query("DELETE FROM faculty WHERE cwid = '?' ", $faculty_cwid);
-    db_query("DELETE FROM users WHERE cwid = '?' AND is_faculty = '1' ", $faculty_cwid);      
+    db_query("DELETE FROM faculty WHERE cwid = ? ", $faculty_cwid);
+    db_query("DELETE FROM users WHERE cwid = ? AND is_faculty = '1' ", $faculty_cwid);      
     
     fp_add_message(t("User has been deleted."));
     fp_goto("admin/users/faculty");
@@ -1055,41 +1062,41 @@ function user_edit_user_form_submit($form, $form_state) {
     if (trim($values["new_password"]) != "") {
       $new_pass = md5(trim($values["new_password"]));
       db_query("UPDATE users 
-                SET password = '?' 
-                WHERE cwid = '?' 
+                SET password = ? 
+                WHERE cwid = ? 
                 AND is_faculty = '1' ", $new_pass, $faculty_cwid);
     }  
     // Okay, now we can just update everything else.
     // Update users table first...
     db_query("UPDATE users
-              SET email = '?',                  
-                  f_name = '?',
-                  l_name = '?',
-                  is_disabled = '?'
-               WHERE cwid = '?'
+              SET email = ?,                  
+                  f_name = ?,
+                  l_name = ?,
+                  is_disabled = ?
+               WHERE cwid = ?
                AND is_faculty = '1' ", $values["email"], $values["f_name"], 
                                        $values["l_name"], $values["is_disabled"],
                                        $faculty_cwid);
    
    // Now, update the faculty table entry.
    db_query("UPDATE faculty
-             SET college = '?',
-                 department = '?',
-                 major_code = '?'                
-             WHERE cwid = '?'", $values["college"], $values["department"], 
-                                $values["major_code"], $faculty_cwid);             
+             SET college = ?,
+                 department = ?,
+                 major_code_csv = ?                
+             WHERE cwid = ? ", $values["college"], $values["department"], 
+                                $values["major_code_csv"], $faculty_cwid);             
 
   }
   else {
     // This is a NEW user!  We need to perform inserts.  Thanks to our validate handler,
     // we know all of the values we have are valid.
     db_query("INSERT INTO users (user_name, password, is_faculty, email, cwid, f_name, l_name, is_disabled)
-              VALUES ('?', '?', '1', '?', '?', '?', '?', '?')
+              VALUES (?, ?, '1', ?, ?, ?, ?, ?)
               ", $values["new_user_name"], md5($values["new_password"]), $values["email"], $values["new_faculty_cwid"],
                  $values["f_name"], $values["l_name"], $values["is_disabled"]);
-    db_query("INSERT INTO faculty (cwid, college, department, major_code)
-              VALUES ('?', '?', '?', '?')
-             ", $values["new_faculty_cwid"], $values["college"], $values["department"], $values["major_code"]);
+    db_query("INSERT INTO faculty (cwid, college, department, major_code_csv)
+              VALUES (?, ?, ?, ?)
+             ", $values["new_faculty_cwid"], $values["college"], $values["department"], $values["major_code_csv"]);
                                   
     fp_add_message(t("User created successfully."));
     fp_goto("admin/users/edit-user", "faculty_cwid=" . $values["new_faculty_cwid"]);
@@ -1353,7 +1360,7 @@ function user_display_student_users() {
           WHERE a.cwid = b.cwid
           AND a.cwid = c.student_id
           AND a.is_student = 1
-          AND c.major_code = '?' 
+          AND c.major_code = ? 
           $in_active_query_line
           ORDER BY l_name, f_name ", $major_code);
     $displaying = $major_code;
@@ -1365,7 +1372,7 @@ function user_display_student_users() {
                           u.is_student = 1
                         AND u.cwid = s.cwid
                         $in_active_query_line
-                        AND l_name BETWEEN '?' AND '?'
+                        AND l_name BETWEEN ? AND ?
                         ORDER BY l_name, f_name ", $ur, $lr);
     $displaying = $ur;
   }
@@ -1642,13 +1649,13 @@ function user_display_users() {
   //$table_name = $tsettings["table_name"];  
   
   
-  if ($search != "" && !($_GET["deptsubmit"]) && !($_GET["rolesubmit"]))
+  if ($search != "" && !(@$_GET["deptsubmit"]) && !(@$_GET["rolesubmit"]))
   {
     // Something was searched for, and the dept submit button was not pushed, nor role submit
     $dept = "";
     $temp = explode(" ",$search);
-    $search1 = $temp[0];
-    $search2 = trim($temp[1]);
+    $search1 = @$temp[0];
+    $search2 = trim(@$temp[1]);
 
     $_SESSION["prev_user_search"] = "search%%$search";
     $displaying = $search;
@@ -1686,7 +1693,7 @@ function user_display_users() {
     $result = db_query("SELECT * FROM users a, faculty b
           WHERE a.cwid = b.cwid
           AND a.is_faculty = 1
-          AND department = '?' 
+          AND department = ? 
           ORDER BY l_name, f_name ", $dept);
     $displaying = $dept;
   }
@@ -1699,7 +1706,7 @@ function user_display_users() {
           WHERE a.cwid = b.cwid
           AND a.is_faculty = 1
           AND a.user_id = c.user_id
-          AND c.rid = '?'
+          AND c.rid = ?
           ORDER BY l_name, f_name ", $role);
     
     $displaying = user_get_role_name($role);
@@ -1710,7 +1717,7 @@ function user_display_users() {
                         WHERE
                           u.is_faculty = 1
                         AND u.cwid = f.cwid
-                        AND l_name BETWEEN '?' AND '?'
+                        AND l_name BETWEEN ? AND ?
                         ORDER BY l_name, f_name ", $ur, $lr);
     $displaying = $ur;
   }
@@ -1813,6 +1820,6 @@ function user_display_users() {
  * @param unknown_type $rid
  */
 function user_get_role_name($rid) {
-  $name = db_result(db_query("SELECT name FROM roles WHERE rid = '?' ", $rid));
+  $name = db_result(db_query("SELECT name FROM roles WHERE rid = ? ", $rid));
   return $name;
 }
